# cpp-I-project

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  drawCzFlagCommands.txt  drawLineCommand.txt  exampleFileBatchConvert.txt  googletest_guide.txt  resources.md
inc/: color.h  color_bgr565.h  color_bgr888.h  color_bw.h  color_grayscale.h  color_palette.h  color_rgb565.h  color_rgb888.h  colors.h  command.h  data_pixel.h  data_pixels.h  file.h  image.h  image_bmp.h  image_data.h  image_iobmp.h  image_iopng.h  image_png.h  image_png_chunk.h  image_tiff.h  paint.h  painter.h  painter_color.h  parser.h  pixel.h  point.h  rotation.h  unit.h  vec.h
src/: CMakeLists.txt  app.cc  color.cc  color_bgr565.cc  color_bgr888.cc  color_bw.cc  color_grayscale.cc  color_rgb565.cc  color_rgb888.cc  empty_main.cc  image.cc  image_bmp.cc  image_iobmp.cc  image_iopng.cc  image_png.cc  image_png_chunk.cc  main.cc  paint.cc  painter.cc  parser.cc
tests/: CMakeLists.txt  color_test.cc  drawing_test.cc  parser_line_test.cc  parser_test.cc
